--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,9 +9,11 @@ body {
   margin: 0px;
 }
 
-/* #main{
-  margin: 150px;
-} */
+#main{
+  margin-right: 20px;
+  margin-left: 20px;
+  background-color: red;
+}
 
 img {
   display: inline-block;
