--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,9 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  margin: 0 0 20px;
-  background-color: #00acb0;
+  background-color: #233d4d;
   overflow: hidden;
 }
 
@@ -24,7 +22,7 @@
 .navLink {
   display: inline-block;
   color: #f2f2f2;
-  background-color: #00acb0;
+  background-color: #233d4d;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -38,5 +36,15 @@
 }
 
 .navLink:hover {
-  background-color: #008183;
+  background-color: #619b8a;
+}
+
+h1{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+p{
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
